[gd_scene load_steps=4 format=3 uid="uid://djhq7opy130dc"]

[ext_resource type="Script" path="res://Scenes/colisiones_mario.gd" id="1_ial54"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41nbh"]
size = Vector2(11.5, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1rnk"]
size = Vector2(14, 32)

[node name="colision" type="CollisionShape2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_41nbh")
script = ExtResource("1_ial54")

[node name="RayCastCabeza" type="RayCast2D" parent="."]
scale = Vector2(1, 0.5)
target_position = Vector2(0.25, -38)
collision_mask = 33

[node name="RayCastPisar" type="RayCast2D" parent="."]
position = Vector2(-6, 0)
scale = Vector2(1, 0.5)
target_position = Vector2(0, 46)
collision_mask = 36

[node name="RayCastPisar2" type="RayCast2D" parent="."]
scale = Vector2(1, 0.5)
target_position = Vector2(0, 46)
collision_mask = 36

[node name="RayCastPisar3" type="RayCast2D" parent="."]
position = Vector2(6, 0)
scale = Vector2(1, 0.5)
target_position = Vector2(0, 46)
collision_mask = 36

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 76

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_j1rnk")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
